libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__r#type__tests__intersection_of_unions.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/type.rs
description: Intersection of unions
expression: Int | String & Boolean | Char
info:
  kind: Ok
---
Type#4294967040@15
  TypeKind (Intersection)
    IntersectionType#4294967040@15
      Type#4294967040@7
        TypeKind (Union)
          UnionType#4294967040@7
            Type#4294967040@3
              TypeKind (Path)
                Path#4294967040@3 (rooted: false)
                  PathSegment#4294967040@2 (name: Int)
            Type#4294967040@6
              TypeKind (Path)
                Path#4294967040@6 (rooted: false)
                  PathSegment#4294967040@5 (name: String)
      Type#4294967040@14
        TypeKind (Union)
          UnionType#4294967040@14
            Type#4294967040@10
              TypeKind (Path)
                Path#4294967040@10 (rooted: false)
                  PathSegment#4294967040@9 (name: Boolean)
            Type#4294967040@13
              TypeKind (Path)
                Path#4294967040@13 (rooted: false)
                  PathSegment#4294967040@12 (name: Char)
