libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__r#type__tests__invalid_field_separator.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/type.rs
description: Invalid field separator
expression: (name String)
info:
  kind: Err
---
(name String)
      ^
