libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__r#type__tests__invalid_operator.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/type.rs
description: Invalid operator
expression: Int $ String
info:
  kind: Err
---
Int $ String
    ^
