libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__r#type__tests__missing_colon.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/type.rs
description: Missing field type
expression: "(name: String, age Int)"
info:
  kind: Err
---
(name: String, age Int)
                   ^
invalid type
expected `:`
