libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__r#type__tests__missing_type.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/type.rs
description: Missing type
expression: ""
info:
  kind: Err
---
^
invalid type
