libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__r#type__tests__multi_element_tuple.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/type.rs
description: Multi-element tuple
expression: "(Int, String, Boolean)"
info:
  kind: Ok
---
Type#4294967040@20
  TypeKind (Tuple)
    TupleType#4294967040@20
      TupleField#4294967040@7
        Type#4294967040@6
          TypeKind (Path)
            Path#4294967040@6 (rooted: false)
              PathSegment#4294967040@5 (name: Int)
      TupleField#4294967040@11
        Type#4294967040@10
          TypeKind (Path)
            Path#4294967040@10 (rooted: false)
              PathSegment#4294967040@9 (name: String)
      TupleField#4294967040@19
        Type#4294967040@18
          TypeKind (Path)
            Path#4294967040@18 (rooted: false)
              PathSegment#4294967040@17 (name: Boolean)
